Fix some spacings in footer

--- a/app/common/components/organisms/Footer/Footer.scss
+++ b/app/common/components/organisms/Footer/Footer.scss
@@ -1,6 +1,7 @@
 @import 'app/common/styles/mixins/media.scss';
 
 .footer {
+  font-size: var(--font-size-body-small);
   background-color: var(--color-beige);
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -62,13 +63,13 @@
     &-list {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: .5rem;
     }
 
     &-column {
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 1.2rem;
       padding-left: 1rem;
       padding-right: 1rem;
     }
